--- a/UniFiler10/Views/DocumentView.xaml
+++ b/UniFiler10/Views/DocumentView.xaml
@@ -23,21 +23,23 @@
     <!--
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>-->
+
+    <!--Background="{StaticResource SystemControlBackgroundBaseLowBrush}"-->
     <Border
             Width="{StaticResource MiniatureWidth}" Height="{StaticResource MiniatureHeight}"
             VerticalAlignment="Center" HorizontalAlignment="Center" 
             Canvas.ZIndex="100"
-            Tapped="OnPreview_Tapped"
             BorderThickness="0">
-        <Border.Background>
+        <!--<Border.Background>
             <LinearGradientBrush EndPoint="0.5,.5" StartPoint="0.5,0">
                 <GradientStop Color="DarkGray" Offset="0"/>
                 <GradientStop Color="Transparent" Offset="1"/>
             </LinearGradientBrush>
-        </Border.Background>
+        </Border.Background>-->
 
         <Grid>
-            <AppBarButton Icon="Go"
+            <AppBarButton Icon="FullScreen"
+                    Visibility="{x:Bind DataContext, Converter={StaticResource IsNotNullToVisible}, Mode=OneWay}"
                     Tapped="OnPreview_Tapped"
                     Canvas.ZIndex="150"
                     Style="{StaticResource AppBarButtonRecoloured}"
@@ -47,7 +49,7 @@
                     HorizontalAlignment="Left" VerticalAlignment="Top"/>
 
             <AppBarButton Icon="Delete" 
-                    Visibility="{x:Bind IsDeleteEnabled, Converter={StaticResource BooleanToVisibleConverter}}"
+                    Visibility="{x:Bind IsDeleteEnabled, Converter={StaticResource BooleanToVisibleConverter}, Mode=OneWay}"
                     Tapped="OnItemDelete_Tapped"
                     Canvas.ZIndex="150"
                     Style="{StaticResource AppBarButtonRecoloured}"
@@ -55,6 +57,39 @@
                     Foreground="{StaticResource FlashyForeground}"
                     Opacity="1"
                     HorizontalAlignment="Right" VerticalAlignment="Top"/>
+
+            <!--<PathIcon Data="M 0,19 V18 H19 V19 M19,19 V0 H18 V19 M4,16 V15 H16 V16 M16,16 V4 H15 V16 Z"
+                    Foreground="{StaticResource FlashyForeground}"
+                    Visibility="{x:Bind IsMultiPage, Converter={StaticResource BooleanToVisibleConverter}, Mode=OneWay}"
+                    Canvas.ZIndex="150"
+                    Opacity="1"
+                    HorizontalAlignment="Right" VerticalAlignment="Bottom">
+            </PathIcon>-->
+
+            <!--<PathIcon Data="M 0,99 V98 H99 V99 M99,99 V0 H98 V99 M80,95 V94 H95 V95 M95,95 V80 H94 V95 Z"
+                    Foreground="{StaticResource FlashyForeground}"
+                    Visibility="{x:Bind IsMultiPage, Converter={StaticResource BooleanToVisibleConverter}, Mode=OneWay}"
+                    Canvas.ZIndex="150"
+                    Opacity="1"
+                    HorizontalAlignment="Right" VerticalAlignment="Bottom">
+            </PathIcon>-->
+
+            <Path Data="M 0,29 H29 V0 M10,25 H25 V10"
+                Stroke="{StaticResource FlashyForeground}"
+                StrokeThickness="2"
+                Visibility="{x:Bind IsMultiPage, Converter={StaticResource BooleanToVisibleConverter}, Mode=OneWay}"
+                Canvas.ZIndex="150"
+                Opacity="1"
+                HorizontalAlignment="Right" VerticalAlignment="Bottom">
+            </Path>
+
+            <!--<PathIcon Data="M 0,29 V28 H29 V29 M29,29 V0 H28 V29 M10,25 V24 H25 V25 M25,25 V10 H24 V25 Z"
+                    Foreground="{StaticResource FlashyForeground}"
+                    Visibility="{x:Bind IsMultiPage, Converter={StaticResource BooleanToVisibleConverter}, Mode=OneWay}"
+                    Canvas.ZIndex="150"
+                    Opacity="1"
+                    HorizontalAlignment="Right" VerticalAlignment="Bottom">
+            </PathIcon>-->
 
             <Image x:Name="ImageViewer"
                     Canvas.ZIndex="50"
