--- a/UniFiler10/Views/FolderView.xaml
+++ b/UniFiler10/Views/FolderView.xaml
@@ -1,6 +1,4 @@
 ﻿<UserControl
-    x:Class="UniFiler10.Views.FolderView"
-    x:Name="me"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:UniFiler10.Views"
@@ -8,88 +6,91 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:utilz="using:Utilz"
+    xmlns:Model="using:UniFiler10.Data.Model"
+    x:Class="UniFiler10.Views.FolderView"
+    x:Name="me"
     mc:Ignorable="d"
     d:DesignHeight="300"
-    d:DesignWidth="400">
+    d:DesignWidth="400" 
+    d:DataContext="{d:DesignInstance Model:Folder, CreateList=True, IsDesignTimeCreatable=True}">
 
-    <Grid>
-        <Grid Visibility="{Binding IsEnabled, Converter={StaticResource BooleanToCollapsedConverter}, FallbackValue=Visible}">
+	<!--Background="{StaticResource SystemControlBackgroundBaseLowBrush}"-->
+	<Grid x:Name="LayoutRoot" Background="{StaticResource SystemControlBackgroundBaseLowBrush}">
+        <Grid Visibility="{Binding IsEnabled, Converter={StaticResource BooleanToCollapsedConverter}, FallbackValue=Visible}" >
             <TextBlock 
-                    x:Uid="NoFolder"
-                    VerticalAlignment="Center" HorizontalAlignment="Center"/>
-        </Grid>
+				x:Uid="NoFolder"
+				VerticalAlignment="Center" HorizontalAlignment="Center"/>
+		</Grid>
+		<ScrollViewer Visibility="{Binding IsEnabled, Converter={StaticResource BooleanToVisibleConverter}, FallbackValue=Collapsed}"
+			VerticalScrollBarVisibility="Auto" VerticalScrollMode="Enabled"
+			HorizontalScrollBarVisibility="Disabled" HorizontalScrollMode="Disabled">
 
-        <ScrollViewer Visibility="{Binding IsEnabled, Converter={StaticResource BooleanToVisibleConverter}, FallbackValue=Collapsed}"
-            VerticalScrollBarVisibility="Auto" VerticalScrollMode="Enabled"
-            HorizontalScrollBarVisibility="Disabled" HorizontalScrollMode="Disabled">
-
-            <Grid>
+            <Grid >
                 <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="{StaticResource GridSize4Placeholder_Medium}"/>
                     <RowDefinition />
-                    <RowDefinition />
-                    <RowDefinition />
+                    <RowDefinition Height="{StaticResource GridSize4Placeholder_Medium}"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="{StaticResource GridSize4Placeholder_Medium}"/>
                     <RowDefinition />
                 </Grid.RowDefinitions>
 
                 <!-- basic data -->
-                <VariableSizedWrapGrid Grid.Row="0" Orientation="Horizontal">
-                    <TextBox
-                    Width="{StaticResource ItemWidth}"
-                    Height="{StaticResource ItemHeight}"
-                    VerticalAlignment="Center"
-                    TextWrapping="Wrap"
-                    MaxLength="{StaticResource MaxFolderNameLength}"
-                    Text="{Binding Name, Mode=TwoWay}"/>
-                    <TextBox
-                    Width="{StaticResource ItemWidth}"
-                    Height="{StaticResource ItemHeight}"
-                    VerticalAlignment="Center"
-                    TextWrapping="Wrap"
-                    MaxLength="{StaticResource MaxFolderDescrLength}"
-                    Text="{Binding Descr0, Mode=TwoWay}"/>
-                    <TextBox
-                    Width="{StaticResource ItemWidth}"
-                    Height="{StaticResource ItemHeight}"
-                    VerticalAlignment="Center"
-                    TextWrapping="Wrap"
-                    MaxLength="{StaticResource MaxFolderDescrLength}"
-                    Text="{Binding Descr1, Mode=TwoWay}"/>
-                    <TextBox
-                    Width="{StaticResource ItemWidth}"
-                    Height="{StaticResource ItemHeight}"
-                    VerticalAlignment="Center"                    
-                    TextWrapping="Wrap"
-                    MaxLength="{StaticResource MaxFolderDescrLength}"
-                    Text="{Binding Descr2, Mode=TwoWay}"/>
+                <VariableSizedWrapGrid Grid.Row="0" Orientation="Horizontal" 
+					ItemWidth="{StaticResource LandscapeItemWidth}">
+
+					<ctl:LolloTextBox
+						Width="{StaticResource LandscapeItemWidth}"
+						Height="{StaticResource LandscapeItemHeight}"
+						VerticalAlignment="Top"
+						HorizontalContentAlignment="Stretch"
+						VerticalContentAlignment="Stretch"
+						TextWrapping="Wrap"
+						MaxLength="{StaticResource MaxFolderNameLength}"
+						Text="{Binding Name, Mode=TwoWay}"
+						Style="{StaticResource LolloTextBoxFieldValueStyle}">
+						<TextBox.Header>
+                            <TextBlock x:Uid="Name"/>
+                        </TextBox.Header>
+                    </ctl:LolloTextBox>
+					
+					<ctl:LolloTextBox
+						VariableSizedWrapGrid.ColumnSpan="2"
+						VariableSizedWrapGrid.RowSpan="2"
+                        VerticalAlignment="Top"
+						HorizontalContentAlignment="Stretch"
+						VerticalContentAlignment="Stretch"
+						TextWrapping="Wrap"
+						MaxLength="{StaticResource MaxFolderDescrLength}"
+						AcceptsReturn="True"
+						PlaceholderText="..."
+						Text="{Binding Descr0, Mode=TwoWay}"
+						Style="{StaticResource LolloTextBoxFieldValueStyle}">
+                        <TextBox.Header>
+                            <TextBlock x:Uid="Remarks"/>
+                        </TextBox.Header>
+                    </ctl:LolloTextBox>
                 </VariableSizedWrapGrid>
 
                 <!-- dynamic categories -->
-                <Grid Grid.Row="1">
+                <Grid Grid.Row="2" >
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition/>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="{StaticResource GridSize4Placeholder_Medium}"/>
                         <ColumnDefinition/>
                     </Grid.ColumnDefinitions>
-                    <!-- a ComboBox would be better but it's crap -->
-                    <!--Tag="{Binding ElementName=CategoriesLV}"-->
-                    <!--Click="OnAddRemoveCategories_Click"-->
 
-                    <AppBarToggleButton 
-                        Grid.Column="0" 
-                        IsChecked="{Binding IsEditingCategories, Mode=TwoWay}"
-                        Icon="Edit"
-                        x:Uid="EditCategories">
-                    </AppBarToggleButton>
-                    <ctl:TolerantListView
-                        x:Name="CategoriesLV"
-                        Grid.Column="1"
-                        Visibility="{Binding IsEditingCategories, Converter={StaticResource BooleanToVisibleConverter}}"
-                        ItemsSource="{Binding ElementName=me, Path=VM.FolderCategorySelector}"
-                        IsMultiSelectCheckBoxEnabled="False" 
-                        IsItemClickEnabled="False"
-                        VerticalAlignment="Center"                        
-                        IsHoldingEnabled="False"
-                        IsDoubleTapEnabled="False"
-                        IsRightTapEnabled="False">
+                    <AppBarToggleButton
+                        VerticalAlignment="Top"
+						IsChecked="{Binding IsEditingCategories, Mode=TwoWay}"
+						Icon="Edit"
+						x:Uid="EditCategories"/>
+                        
+                    <ItemsControl Grid.Column="2"
+                        VerticalAlignment="Top"
+						Visibility="{Binding IsEditingCategories, Converter={StaticResource BooleanToVisibleConverter}}"
+						ItemsSource="{Binding VM.FolderCategorySelector, ElementName=me}">
                         <ItemsControl.ItemsPanel>
                             <ItemsPanelTemplate>
                                 <ItemsStackPanel Orientation="Vertical"/>
@@ -97,70 +98,93 @@
                         </ItemsControl.ItemsPanel>
                         <ItemsControl.ItemTemplate>
                             <DataTemplate>
-                                <StackPanel Orientation="Horizontal">
-                                    <TextBlock 
-                                        VerticalAlignment="Center"
-                                        Text="{Binding Name, Mode=OneWay}" />
-                                    <CheckBox 
-                                        VerticalAlignment="Center"
-                                        IsChecked="{Binding IsOn, Mode=TwoWay}"/>
-                                </StackPanel>
+                                <CheckBox 
+									IsChecked="{Binding IsOn, Mode=TwoWay}"
+                                    Style="{StaticResource CheckBoxLolloStyle}">
+                                    <CheckBox.Content>
+                                        <TextBlock
+										    Text="{Binding Name, Mode=OneWay}" />
+                                    </CheckBox.Content>
+                                </CheckBox>
                             </DataTemplate>
                         </ItemsControl.ItemTemplate>
-                    </ctl:TolerantListView>
+                    </ItemsControl>
                 </Grid>
 
+                <!--<Border Grid.Row="3" Background="{StaticResource SystemControlBackgroundBaseLowBrush}"
+                    VerticalAlignment="Stretch" HorizontalAlignment="Stretch"/>-->
+                
                 <!-- dynamic fields -->
-                <ItemsControl Grid.Row="2"
-                ItemsSource="{Binding DynamicFields}">
+                <ItemsControl Grid.Row="4"
+					ItemsSource="{Binding DynamicFields}">
                     <ItemsControl.ItemsPanel>
                         <ItemsPanelTemplate>
-                            <ItemsStackPanel Orientation="Vertical"/>
+                            <ItemsWrapGrid Orientation="Horizontal"/>
                         </ItemsPanelTemplate>
                     </ItemsControl.ItemsPanel>
                     <ItemsControl.ItemTemplate>
                         <DataTemplate>
-                            <Grid>
+							<Grid x:Name="DFGrid">
+								<!--BorderThickness="{StaticResource PanelPadding}"
+								BorderBrush="{ThemeResource SystemControlBackgroundBaseLowBrush}">-->
+								<!--Background="Transparent"
+                                PointerEntered="DFGrid_PointerEntered"
+                                PointerExited="DFGrid_PointerExited">-->
+                                <!--<Grid.Resources>
+                                    <Storyboard x:Key="EvidenceGrid">
+                                        <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="BorderBrush"
+                                            Storyboard.TargetName="DFGrid">
+											<DiscreteObjectKeyFrame KeyTime="0" Value="{ThemeResource SystemControlHighlightAccentBrush}"/>
+                                        </ObjectAnimationUsingKeyFrames>
+                                    </Storyboard>
+                                </Grid.Resources>-->
                                 <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="{StaticResource ItemPartWidthLarge_ForGrid}"/>
-                                    <ColumnDefinition Width="{StaticResource GridSize4Placeholder_Medium}"/>
-                                    <ColumnDefinition Width="{StaticResource ItemPartWidthLarge_ForGrid}"/>
-                                    <ColumnDefinition Width="{StaticResource GridSize4Placeholder_Medium}"/>
-                                    <ColumnDefinition Width="Auto"/>
+                                    <ColumnDefinition Width="{StaticResource LandscapeItemWidth_ForGrid}"/>
+                                    <!--<ColumnDefinition Width="Auto"/>-->
                                 </Grid.ColumnDefinitions>
-                                <TextBlock
-                                    Grid.Column="0"
-                                    VerticalAlignment="Center"
-                                    Text="{Binding FieldDescription.Caption, Mode=OneWay}" />
-                                <TextBox
-                                    Grid.Column="2"
-                                    VerticalAlignment="Center"
-                                    Text="{Binding FieldValue.Vaalue, Mode=OneWay}"
-                                    LostFocus="OnVaalue_LostFocus"
-                                    MaxLength="{StaticResource MaxFolderDescrLength}"                                   
-                                    Visibility="{Binding FieldDescription.IsAnyValueAllowed, Converter={StaticResource BooleanToVisibleConverter}}"/>
-                                <TextBlock
-                                    Grid.Column="2"
-                                    VerticalAlignment="Center"
-                                    Text="{Binding FieldValue.Vaalue, Mode=OneWay}"
-                                    Visibility="{Binding FieldDescription.IsAnyValueAllowed, Converter={StaticResource BooleanToCollapsedConverter}}"/>
-                                <ComboBox
-                                    Grid.Column="4"
-                                    VerticalAlignment="Center"
-                                    Style="{StaticResource ComboBoxWoText}"
-                                    DisplayMemberPath="Vaalue"
-                                    DropDownOpened="OnDynamicFieldValueSelectComboBox_Opened"
-                                    SelectionChanged="OnDynamicFieldValueSelectComboBox_SelectionChanged"
-                                    IsSynchronizedWithCurrentItem="False" IsHoldingEnabled="False" IsDoubleTapEnabled="False" IsRightTapEnabled="False"/>
+
+                                <ctl:LolloTextBox
+									x:Name="VaalueTB"
+									Height="{StaticResource LandscapeItemHeight}"
+									VerticalAlignment="Center"
+									Text="{Binding FieldValue.Vaalue, Mode=OneWay}"                                    
+									LostFocus="OnVaalue_LostFocus"
+									MaxLength="{StaticResource MaxFolderDescrLength}"
+									Header="{Binding FieldDescription.Caption, Mode=OneWay}"
+									TextWrapping="Wrap"
+									IsReadOnly="{Binding FieldDescription.IsAnyValueAllowed, Converter={StaticResource TrueToFalseConverter}}"
+									Style="{StaticResource LolloTextBoxFieldValueStyle}"
+									DisplayMemberPath="Vaalue"
+									ItemsSource="{Binding FieldDescription.PossibleValues}">
+                                    <!--<TextBox.Header>
+                                        <Border Background="{StaticResource SystemControlBackgroundBaseLowBrush}">
+                                        <TextBlock Text="{Binding FieldDescription.Caption, Mode=OneWay}"/>
+                                        </Border>
+                                    </TextBox.Header>-->
+                                </ctl:LolloTextBox>
+                                <!--<Background="Transparent">-->
+								<!--<ComboBox Grid.Column="1"
+									Background="{ThemeResource SystemControlBackgroundAltHighBrush}"
+									Height="{StaticResource LandscapeItemHeight}"
+									VerticalAlignment="Center"
+									Visibility="{Binding FieldDescription.PossibleValues, Converter={StaticResource IListNotEmptyToVisible}}"
+									ItemsSource="{Binding FieldDescription.PossibleValues}"
+									Style="{StaticResource ComboBoxWoText}"
+									DisplayMemberPath="Vaalue"                                    
+									SelectionChanged="OnDynamicFieldValueSelectComboBox_SelectionChanged"
+									IsSynchronizedWithCurrentItem="False"/>-->
                             </Grid>
                         </DataTemplate>
                     </ItemsControl.ItemTemplate>
                 </ItemsControl>
 
+                <!--<Border Grid.Row="5" Background="{StaticResource SystemControlBackgroundBaseLowBrush}"
+                    VerticalAlignment="Stretch" HorizontalAlignment="Stretch"/>-->
+
                 <!-- Wallets -->
-                <local:WalletsView Grid.Row="3"
-                VM="{Binding ElementName=me, Path=VM}"
-                DataContext="{Binding}"/>
+                <local:WalletsView Grid.Row="6"
+					VM="{Binding VM, ElementName=me}"
+					DataContext="{Binding}"/>
             </Grid>
         </ScrollViewer>
     </Grid>
