--- a/UniFiler10/App.xaml
+++ b/UniFiler10/App.xaml
@@ -15,6 +15,7 @@
                  -->
                 <ResourceDictionary Source="Styles/Styles.xaml"/>
                 <ResourceDictionary Source="Controlz/LayoutTransformer.xaml"/>
+				<ResourceDictionary Source="Controlz/LolloTextBox.xaml"/>
             </ResourceDictionary.MergedDictionaries>
             <conv:BooleanToCollapsedConverter x:Key="BooleanToCollapsedConverter"/>
             <conv:BooleanToVisibleConverter x:Key="BooleanToVisibleConverter"/>
